--- a/style/style.css
+++ b/style/style.css
@@ -34,3 +34,33 @@ background: linear-gradient(180.00deg, rgba(7, 2, 17, 1),rgba(7, 2, 17, 0) 100%)
     color: rgba(255, 255, 255, 1);
     text-align: center;
 }
+
+.roup-content {
+   ;
+}
+.bp-group {
+    font-size: 88px;
+    text-align: center;
+    font-weight: bold;
+    color: red;
+    margin-top: 130px;
+}
+.cp-group {
+    font-size: 24px;
+    font-weight: 500px;
+    text-align: center;
+    margin-top: 49px;
+    color: red;
+}
+.dp-group {
+font-size: 48px;
+font-weight: 700;
+text-align: center;
+}
+
+.deep {
+    display: flex;
+    justify-content: center;
+    margin: 47px;
+    
+}
