--- a/style/style.css
+++ b/style/style.css
@@ -64,3 +64,49 @@ text-align: center;
     margin: 47px;
     
 }
+
+/* emoji section */
+
+.emoji {
+    max-width: 1320px;
+    height: 600px;
+    margin: 0 auto;
+    border-radius: 16px;
+    background-image:url("../images/Vectorrr.png");
+    border-radius: 16px;
+background: linear-gradient(90.00deg, rgba(7, 2, 17, 1),rgba(7, 2, 17, 0) 100%), url("../images/Vectorrr.png");
+margin-top: 120px;
+
+
+
+
+}
+.emoji-container {
+    text-align: left;
+    padding: 50px 100px;
+    align-items: center;
+    border-radius: 0;
+    margin-top: 0 auto;
+}
+.ncp-title {
+    font-size: 64px;
+    font-weight: 900px;
+    text-align: left;
+    color: rgba(255, 255, 255, 1);
+}
+.ncp-subtitle {
+    font-size: 18px;
+    font-weight: 400px;
+    text-align: left;
+    color: rgba(255, 255, 255, 0.8);
+    margin-top: 24px;
+}
+
+.ncp-description {
+    font-size: 20px;
+    font-weight: 700px;
+    text-align: left;
+    color: rgba(255, 255, 255, 1);
+    margin-left: 50px;
+    margin-top: 48px;
+}
